unpackaged/main/default/objects/Merchant_Checklist__c/Merchant_Checklist__c.object-meta.xml
<CustomObject>
    <label>Merchant Checklist</label>
    <nameField>
        <displayFormat>MCh-{00000}</displayFormat>
        <label>Merchant Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>