unpackaged/main/default/objects/Merchant_Checklist__c/fields/ACH_Completed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH (C)</label>
    <type>Checkbox</type>
</CustomField>