unpackaged/main/default/objects/Merchant_Checklist__c/fields/ACH_Needed__c.field-meta.xml
<CustomField>
    <fullName>ACH_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ACH (N)</label>
    <type>Checkbox</type>
</CustomField>