unpackaged/main/default/objects/Merchant_Checklist__c/fields/Active_SOS_Completed__c.field-meta.xml
<CustomField>
    <fullName>Active_SOS_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active SOS (C)</label>
    <type>Checkbox</type>
</CustomField>