unpackaged/main/default/objects/Merchant_Checklist__c/fields/Alternative_Name_Hit_C__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Name_Hit_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Name Hit (C)</label>
    <type>Checkbox</type>
</CustomField>