unpackaged/main/default/objects/Merchant_Checklist__c/fields/Amount_Doc_d__c.field-meta.xml
<CustomField>
    <fullName>Amount_Doc_d__c</fullName>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <formula>Opportunity__r.Amount_Offered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Doc'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>