unpackaged/main/default/objects/Merchant_Checklist__c/fields/Approval_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration_Date__c</fullName>
    <formula>Opportunity__r.Approval_Expiration_Date__c</formula>
    <label>Approval Expiration</label>
    <type>Date</type>
</CustomField>