unpackaged/main/default/objects/Merchant_Checklist__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <inlineHelpText>These are the notes off the related Credit Review record.</inlineHelpText>
    <label>Approval Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>