unpackaged/main/default/objects/Merchant_Checklist__c/fields/Automated_Bank_Verification_N__c.field-meta.xml
<CustomField>
    <fullName>Automated_Bank_Verification_N__c</fullName>
    <formula>IF(
AND(
    OR(Opportunity_Record_Type__c = "Broker WC Oppty",
       Opportunity_Record_Type__c = "Working Capital Oppty"
       ),
    Opportunity_Type__c = "NEW", 
    Amount_Doc_d__c &gt; 100000
    ), 
   True, False
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Verification (N)</label>
    <type>Checkbox</type>
</CustomField>