unpackaged/main/default/objects/Merchant_Checklist__c/fields/Bank_Acct_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Bank_Acct_Last_4__c</fullName>
    <label>Bank Acct # - Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>