unpackaged/main/default/objects/Merchant_Checklist__c/fields/Bank_Verification_N__c.field-meta.xml
<CustomField>
    <fullName>Bank_Verification_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Verification (N)</label>
    <type>Checkbox</type>
</CustomField>