unpackaged/main/default/objects/Merchant_Checklist__c/fields/Beneficial_Ownership_C__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Ownership_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficial Ownership (C)</label>
    <type>Checkbox</type>
</CustomField>