unpackaged/main/default/objects/Merchant_Checklist__c/fields/Beneficial_Ownership_N__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Ownership_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficial Ownership (N)</label>
    <type>Checkbox</type>
</CustomField>