unpackaged/main/default/objects/Merchant_Checklist__c/fields/BL_Agreement_Needed__c.field-meta.xml
<CustomField>
    <fullName>BL_Agreement_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BL Agreement (N)</label>
    <type>Checkbox</type>
</CustomField>