unpackaged/main/default/objects/Merchant_Checklist__c/fields/BLA_Cert_N__c.field-meta.xml
<CustomField>
    <fullName>BLA_Cert_N__c</fullName>
    <defaultValue>true</defaultValue>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <label>BLA Cert (N)</label>
    <type>Checkbox</type>
</CustomField>