unpackaged/main/default/objects/Merchant_Checklist__c/fields/Blanket_UCC_Filed_150k_N__c.field-meta.xml
<CustomField>
    <fullName>Blanket_UCC_Filed_150k_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blanket UCC Filing (N)</label>
    <type>Checkbox</type>
</CustomField>