unpackaged/main/default/objects/Merchant_Checklist__c/fields/Blanket_UCC_Filed_50k_C__c.field-meta.xml
<CustomField>
    <fullName>Blanket_UCC_Filed_50k_C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a Blanket UCC has been filed on a transaction over $50k.</description>
    <inlineHelpText>This field will indicate if a Blanket UCC has been filed on a transaction over $50k.</inlineHelpText>
    <label>Blanket UCC Filed $50k+ (C)</label>
    <type>Checkbox</type>
</CustomField>