unpackaged/main/default/objects/Merchant_Checklist__c/fields/Blanket_UCC_Filed_50k_N__c.field-meta.xml
<CustomField>
    <fullName>Blanket_UCC_Filed_50k_N__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate if a Blanket UCC is required on the transaction.</description>
    <inlineHelpText>This field will indicate if a Blanket UCC is required on the transaction.</inlineHelpText>
    <label>Blanket UCC Filed $50k+ (N)</label>
    <type>Checkbox</type>
</CustomField>