unpackaged/main/default/objects/Merchant_Checklist__c/fields/Clear_DL_Needed__c.field-meta.xml
<CustomField>
    <fullName>Clear_DL_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Clear DL (N)</label>
    <type>Checkbox</type>
</CustomField>