unpackaged/main/default/objects/Merchant_Checklist__c/fields/Competitor_Review_Needed__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Review_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Competitor Review (N)</label>
    <type>Checkbox</type>
</CustomField>