unpackaged/main/default/objects/Merchant_Checklist__c/fields/Completed_Documents_C__c.field-meta.xml
<CustomField>
    <fullName>Completed_Documents_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Documents (C)</label>
    <type>Checkbox</type>
</CustomField>