unpackaged/main/default/objects/Merchant_Checklist__c/fields/Compliance_LN_Report_C__c.field-meta.xml
<CustomField>
    <fullName>Compliance_LN_Report_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance LN Report (C)</label>
    <type>Checkbox</type>
</CustomField>