unpackaged/main/default/objects/Merchant_Checklist__c/fields/Compliance_LN_Report_N__c.field-meta.xml
<CustomField>
    <fullName>Compliance_LN_Report_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Compliance LN Report (N)</label>
    <type>Checkbox</type>
</CustomField>