unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip2_N__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip2_N__c</fullName>
    <label>Credit Stip2 (N)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Citizen Verification</fullName>
            </value>
            <value>
                <fullName>Full 6 Months Banks for &gt; $150k</fullName>
            </value>
            <value>
                <fullName>Full Statement</fullName>
            </value>
            <value>
                <fullName>Landlord Reference</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Legal Name Verification</fullName>
            </value>
            <value>
                <fullName>License Verification</fullName>
            </value>
            <value>
                <fullName>MTD - Inquiries</fullName>
            </value>
            <value>
                <fullName>MTD - Low ending balance</fullName>
            </value>
            <value>
                <fullName>MTD Required Day of Funding</fullName>
            </value>
            <value>
                <fullName>Official Bank Statement</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
            <value>
                <fullName>Proof of Fleet</fullName>
            </value>
            <value>
                <fullName>Public Record Payment Plans</fullName>
            </value>
            <value>
                <fullName>Secretary of State to be Active</fullName>
            </value>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>UCC Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>