unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_2_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_2_Reason__c</fullName>
    <label>Credit Stip 2 Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>