unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_3_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_3_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Stip #3 (C)</label>
    <type>Checkbox</type>
</CustomField>