unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_3_Needed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_3_Needed__c</fullName>
    <label>Credit Stip #3 (N)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>