unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_Funding_Req_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Req_Other_Reason__c</fullName>
    <label>Credit Stip Funding Req - Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>