unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_Funding_Requirement_2_N__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Requirement_2_N__c</fullName>
    <label>Credit Stip Funding Requirement 2 (N)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Verification</fullName>
            </value>
            <value>
                <fullName>Bank Verification</fullName>
            </value>
            <value>
                <fullName>Cross Corporate Guaranty</fullName>
            </value>
            <value>
                <fullName>Dual ACH</fullName>
            </value>
            <value>
                <fullName>Form 8821</fullName>
            </value>
            <value>
                <fullName>Fraud Alert Verification</fullName>
            </value>
            <value>
                <fullName>Funding Layering Question</fullName>
            </value>
            <value>
                <fullName>Landlord Reference</fullName>
            </value>
            <value>
                <fullName>Lender Payoff</fullName>
            </value>
            <value>
                <fullName>Main Signor Clarification</fullName>
            </value>
            <value>
                <fullName>MTD - Low ending balance</fullName>
            </value>
            <value>
                <fullName>Phone Verification</fullName>
            </value>
            <value>
                <fullName>Proof Mortgage Current</fullName>
            </value>
            <value>
                <fullName>Second Position</fullName>
            </value>
            <value>
                <fullName>Site Inspection Required</fullName>
            </value>
            <value>
                <fullName>Tax Return if funding $150+</fullName>
            </value>
            <value>
                <fullName>Updated Signed &amp; Dated Applications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>