unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stip_Funding_Requirement_3_C__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stip_Funding_Requirement_3_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Stip Funding Requirement 3 (C)</label>
    <type>Checkbox</type>
</CustomField>