unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stips_Funding_Req_Other_C__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stips_Funding_Req_Other_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Stips Funding Req - Other (C)</label>
    <type>Checkbox</type>
</CustomField>