unpackaged/main/default/objects/Merchant_Checklist__c/fields/Credit_Stips_Funding_Req_Other_N__c.field-meta.xml
<CustomField>
    <fullName>Credit_Stips_Funding_Req_Other_N__c</fullName>
    <label>Credit Stips Funding Req - Other (N)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>