unpackaged/main/default/objects/Merchant_Checklist__c/fields/Data_Merch_C__c.field-meta.xml
<CustomField>
    <fullName>Data_Merch_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Merch (C)</label>
    <type>Checkbox</type>
</CustomField>