unpackaged/main/default/objects/Merchant_Checklist__c/fields/Data_Merch_N__c.field-meta.xml
<CustomField>
    <fullName>Data_Merch_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Data Merch (N)</label>
    <type>Checkbox</type>
</CustomField>