unpackaged/main/default/objects/Merchant_Checklist__c/fields/Deal_Review_N__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Review (N)</label>
    <type>Checkbox</type>
</CustomField>