unpackaged/main/default/objects/Merchant_Checklist__c/fields/Email_for_Oppty_Completed__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Oppty_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email for Oppty (C)</label>
    <type>Checkbox</type>
</CustomField>