unpackaged/main/default/objects/Merchant_Checklist__c/fields/Funding_Stipulation_1_Reason__c.field-meta.xml
<CustomField>
    <fullName>Funding_Stipulation_1_Reason__c</fullName>
    <label>Funding Stipulation #1 Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>