unpackaged/main/default/objects/Merchant_Checklist__c/fields/Guarantor_1__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_1__c</fullName>
    <label>Guarantor 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>