unpackaged/main/default/objects/Merchant_Checklist__c/fields/Guarantor_3__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_3__c</fullName>
    <label>Guarantor 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>