unpackaged/main/default/objects/Merchant_Checklist__c/fields/LL_Verification_Needed__c.field-meta.xml
<CustomField>
    <fullName>LL_Verification_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LL Verification (N)</label>
    <type>Checkbox</type>
</CustomField>