unpackaged/main/default/objects/Merchant_Checklist__c/fields/Max_Approval__c.field-meta.xml
<CustomField>
    <fullName>Max_Approval__c</fullName>
    <description>This field will capture the Maximum Approval Amount that the customer is eligible for.</description>
    <label>Max Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>