unpackaged/main/default/objects/Merchant_Checklist__c/fields/Merchant_Checklist_Acknowledged_By__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Checklist_Acknowledged_By__c</fullName>
    <label>Merchant Checklist Acknowledged By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>