unpackaged/main/default/objects/Merchant_Checklist__c/fields/Misc_Item_1_Needed__c.field-meta.xml
<CustomField>
    <fullName>Misc_Item_1_Needed__c</fullName>
    <label>Misc Item #1 (N)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>