unpackaged/main/default/objects/Merchant_Checklist__c/fields/Modifications_or_Amendments_N__c.field-meta.xml
<CustomField>
    <fullName>Modifications_or_Amendments_N__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <label>Modifications or Amendments (N)</label>
    <type>Checkbox</type>
</CustomField>