unpackaged/main/default/objects/Merchant_Checklist__c/fields/MTD_Required_DoF_N__c.field-meta.xml
<CustomField>
    <fullName>MTD_Required_DoF_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MTD Required DoF (N)</label>
    <type>Checkbox</type>
</CustomField>