unpackaged/main/default/objects/Merchant_Checklist__c/fields/OFAC_Hit_N__c.field-meta.xml
<CustomField>
    <fullName>OFAC_Hit_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OFAC Hit (N)</label>
    <type>Checkbox</type>
</CustomField>