unpackaged/main/default/objects/Merchant_Checklist__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>