unpackaged/main/default/objects/Merchant_Checklist__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>New field created as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>