unpackaged/main/default/objects/Merchant_Checklist__c/fields/Pay_Proceeds_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pay_Proceeds_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field label on this was updated on 7/12 from Pay Proceeds Completed (C)</description>
    <label>Loan Proceed Direction (C)</label>
    <type>Checkbox</type>
</CustomField>