unpackaged/main/default/objects/Merchant_Checklist__c/fields/Pay_Proceeds_Completed_c__c.field-meta.xml
<CustomField>
    <fullName>Pay_Proceeds_Completed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field label updated as part of Wells Fargo updates to Merchant Checklist object (NF-1809).</description>
    <label>Loan Proceed Direction (C)</label>
    <type>Checkbox</type>
</CustomField>