unpackaged/main/default/objects/Merchant_Checklist__c/fields/Related_Opportunity_Search_Docs_In_C__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Search_Docs_In_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Opportunity Search Docs In (C)</label>
    <type>Checkbox</type>
</CustomField>