unpackaged/main/default/objects/Merchant_Checklist__c/fields/Related_Opportunity_Search_Docs_In_N__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Search_Docs_In_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Related Opportunity Search Docs In (N)</label>
    <type>Checkbox</type>
</CustomField>