unpackaged/main/default/objects/Merchant_Checklist__c/fields/Retired_Deal_Review_N__c.field-meta.xml
<CustomField>
    <fullName>Retired_Deal_Review_N__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field no longer used.  Was replaced by Automated_Deal_Review__c field.</description>
    <label>Deal Review (N)</label>
    <type>Checkbox</type>
</CustomField>