unpackaged/main/default/objects/Merchant_Checklist__c/fields/Run_Related_Opportunity_Search_C__c.field-meta.xml
<CustomField>
    <fullName>Run_Related_Opportunity_Search_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Related Opportunity Search (C)</label>
    <type>Checkbox</type>
</CustomField>