unpackaged/main/default/objects/Merchant_Checklist__c/fields/Run_Related_Opportunity_Search_N__c.field-meta.xml
<CustomField>
    <fullName>Run_Related_Opportunity_Search_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Run Related Opportunity Search (N)</label>
    <type>Checkbox</type>
</CustomField>