unpackaged/main/default/objects/Merchant_Checklist__c/fields/SOS_Active_Needed__c.field-meta.xml
<CustomField>
    <fullName>SOS_Active_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SOS Active (N)</label>
    <type>Checkbox</type>
</CustomField>