unpackaged/main/default/objects/Merchant_Checklist__c/fields/SSN_Search_C__c.field-meta.xml
<CustomField>
    <fullName>SSN_Search_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSN Search (C)</label>
    <type>Checkbox</type>
</CustomField>