unpackaged/main/default/objects/Merchant_Checklist__c/fields/SSN_Search_N__c.field-meta.xml
<CustomField>
    <fullName>SSN_Search_N__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SSN Search (N)</label>
    <type>Checkbox</type>
</CustomField>