unpackaged/main/default/objects/Merchant_Checklist__c/fields/UCC_Search_25k_Completed__c.field-meta.xml
<CustomField>
    <fullName>UCC_Search_25k_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Search $25k+ (C)</label>
    <type>Checkbox</type>
</CustomField>