unpackaged/main/default/objects/Merchant_Checklist__c/fields/UCC_Search_25k_Needed__c.field-meta.xml
<CustomField>
    <fullName>UCC_Search_25k_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Search $25k+ (N)</label>
    <type>Checkbox</type>
</CustomField>