unpackaged/main/default/objects/Merchant_Checklist__c/fields/UCC_Search_50k_C__c.field-meta.xml
<CustomField>
    <fullName>UCC_Search_50k_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Search (C)</label>
    <type>Checkbox</type>
</CustomField>