unpackaged/main/default/objects/Merchant_Checklist__c/fields/UCC_Search_50k_N__c.field-meta.xml
<CustomField>
    <fullName>UCC_Search_50k_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UCC Search (N)</label>
    <type>Checkbox</type>
</CustomField>