unpackaged/main/default/objects/Merchant_Checklist__c/fields/Unsettled_Balance_Addendum_c__c.field-meta.xml
<CustomField>
    <fullName>Unsettled_Balance_Addendum_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsettled Balance Addendum (C)</label>
    <type>Checkbox</type>
</CustomField>