unpackaged/main/default/objects/Merchant_Checklist__c/fields/Verify_Net_Paid_In_N__c.field-meta.xml
<CustomField>
    <fullName>Verify_Net_Paid_In_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Net % / % Paid In (N)</label>
    <type>Checkbox</type>
</CustomField>