unpackaged/main/default/objects/Merchant_Checklist__c/fields/Voided_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Voided_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voided Check (C)</label>
    <type>Checkbox</type>
</CustomField>