unpackaged/main/default/objects/Merchant_Checklist__c/fields/Voided_Check_Needed__c.field-meta.xml
<CustomField>
    <fullName>Voided_Check_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Voided Check (N)</label>
    <type>Checkbox</type>
</CustomField>