unpackaged/main/default/objects/Merchant_Checklist__c/validationRules/Beneficial_Ownership_Compete.validationRule-meta.xml
<ValidationRule>
    <fullName>Beneficial_Ownership_Compete</fullName>
    <active>false</active>
    <description>This rule will validate that the Beneficial Ownership task was marked as completed prior to the funder acknowledging the checklist if Beneficial Ownership information is required.</description>
    <errorConditionFormula>AND(
 Merchant_Checklist_Acknowledged__c = TRUE,
 Beneficial_Ownership_N__c = TRUE,  
 Beneficial_Ownership_C__c = FALSE
   )</errorConditionFormula>
    <errorMessage>Before acknowledging that this Merchant Checklist is complete the Beneficial Ownership step must be completed.</errorMessage>
</ValidationRule>